--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -6,6 +6,29 @@
         text-align: center;
         gap: 2rem;
     }
+ 
+    nav {
+        flex: 1 1 auto;
+    }
+    
+    nav ul {
+    list-style: none;
+    display: flex;
+    text-align: center;
+    }
+    
+    nav a {
+    color: white;
+    font-size: 1.2em;
+    font-weight: normal;
+    padding: 1em;
+    }
+    
+    nav a:hover {
+    text-decoration: none;
+    color: goldenrod;
+    }
+      
     .column-1 {
         grid-column: 1;
         grid-row: 1;
