--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -17,6 +17,28 @@ footer {
     padding: 1.2rem;
 }
 
+nav {
+    flex: 1 1 auto;
+  }
+  nav ul {
+    list-style: none;
+    display: flex;
+    text-align: center;
+  }
+  
+  nav a {
+    color: white;
+    font-size: 1.2em;
+    font-weight: normal;
+    padding: 1em;
+  }
+  
+  nav a:hover {
+    text-decoration: none;
+    color: goldenrod;
+  }
+  
+
 main {
     display: grid;
     grid-template-columns: 1fr;
