--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -79,7 +79,7 @@ main {
 }
 
 h1 {
-    font-size: 4 rem;
+    font-size: 2.0em;
     padding-top: 4%;
     text-align: center;
 }
@@ -116,3 +116,4 @@ img {
     margin-bottom: .8rem;
     margin-top: .8rem;
 }
+
