Updated color scheme

--- a/lesson3/css/color-scheme.css
+++ b/lesson3/css/color-scheme.css
@@ -8,31 +8,31 @@
     .main-color {
         grid-column: 1;
         grid-row: 1;
-        background-color: green;
-        color: white;
+        background-color: #E9F1F7;
+        color: #131B23;
     }
     .secondary-color {
         grid-column: 2;
         grid-row: 1;
-        background-color: red;
-        color: white;
+        background-color: #E7DFC6;
+        color: #131B23;
     }
     .paragraph-color {
         grid-column: 3;
         grid-row: 1;
-        background-color: white;
-        color: black;
+        background-color: #2274A5;
+        color: #E9F1F7;
     }
     .background-color {
         grid-column: 1;
         grid-row: 2;
-        background-color: bisque;
-        color: black;
+        background-color: #E9F1F7;
+        color: #131B23;
     }
     .observation-color {
         grid-column: 2;
         grid-row: 2;
-        background-color: blue;
-        color: white;
+        background-color: #816C61;
+        color: #131B23;
     }
 }
