--- a/lesson3/css/color-scheme.css
+++ b/lesson3/css/color-scheme.css
@@ -8,7 +8,7 @@
     .main-color {
         grid-column: 1;
         grid-row: 1;
-        background-color: #E9F1F7;
+        background-color: #2274A5;
         color: #131B23;
     }
     .secondary-color {
